kubernetes/toykvstore-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: toykvstore
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: toykvstore
        tier: backend
    spec:
      containers:
      - name: toykvstore
        image: toykvstore:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
