kubernetes/toykvstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toykvstore
  labels:
    app: toykvstore
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: toykvstore
    tier: backend
